--- a/README
+++ b/README
@@ -1,6 +1,11 @@
-# internet-driewheeler
+------------------------
+| internet-driewheeler |
+------------------------
 
 'evolution of achteruitgang'
 
+
 # broken internet
 https://secushare.org/broken-internet
+
+internet ® 1990-2021
